--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<div class="kid1box">
 							<img src="images/kid1.png" class="responsive">
 						</div>
-						<div class="kid2box float-right">
+						<div class="kid2box">
 							<img src="images/kid2.png" class="responsive">
 						</div>
 						<div class="kid3box">
@@ -85,7 +85,7 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="row">
-								<div class="col-sm-5 card bg-blue text-white">
+								<div class="col-sm-5 card mb-5 bg-blue text-white">
 							    <div class="card-body">
 							    	<img src="images/icons8-microsoft-word-2019-144.png">
 							    	<h3 class="text-white">Microsoft Word</h3>
@@ -94,7 +94,7 @@
 		  							</button>
 							    </div>
 							</div>
-							<div class="col-sm-5 card bg-white ">
+							<div class="col-sm-5 card mb-5 bg-white ">
 							    <div class="card-body">
 							    	<img src="images/icons8-microsoft-powerpoint-144.png">
 							    	<h3>Microsoft Powerpoint</h3>
@@ -107,7 +107,7 @@
 						</div>
 						<div class="col-sm-6">
 							<div class="row">
-								<div class="col-sm-5 card bg-blue text-white">
+								<div class="col-sm-5 card mb-5 bg-blue text-white">
 							    <div class="card-body">
 							    	<img src="images/icons8-microsoft-excel-2019-144.png">
 							    	<h3 class="text-white">Microsoft Excel</h3>
@@ -116,7 +116,7 @@
 		  							</button>
 							    </div>
 							</div>
-							<div class="col-sm-5 card bg-white ">
+							<div class="col-sm-5 card mb-5 bg-white ">
 							    <div class="card-body">
 							    	<img src="images/icons8-chrome-144.png">
 							    	<h3>Chrome- Web Browsing </h3>
@@ -272,7 +272,7 @@
 					</div>
 					<div class="col-sm-6">
 						<div class="imageGroup">
-							<img src="images/kids.png">
+							<img src="images/kids.png" class="img-fluid">
 						</div>
 					</div>
 				</div>
